# msp430_launchpad

./: .gitignore  justfile  makefile  meson.build  msp430_gcc.cross  shell.nix
src/: strippedMain.c
